# erlang-language-platform

./: Cargo.toml
crates/base_db/: Cargo.toml
crates/base_db/src/: change.rs  fixture.rs  include.rs  input.rs  lib.rs
crates/elp/: Cargo.toml
crates/elp/src/: reload.rs  server.rs  snapshot.rs
crates/eqwalizer/: Cargo.toml
crates/eqwalizer/src/: db.rs
crates/ide/: Cargo.toml
crates/ide/src/: lib.rs
crates/ide_db/: Cargo.toml
crates/ide_db/src/: apply_change.rs  erl_ast.rs  lib.rs
crates/project_model/: Cargo.toml
crates/project_model/src/: buck.rs  eqwalizer_support.rs  json.rs  lib.rs  no_manifest.rs  otp.rs  rebar.rs  test_fixture.rs
crates/windows/: Cargo.toml
crates/windows/src/: lib.rs
